# serializer version: 1
# name: test_dump[json]
  b'[{"a":"a1"},{"b":["b1","b2"]},{"c":{"c1":"c11"}}]'
# ---
# name: test_dump[jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file[tests/data/gen/api_array.json.gz]
  b'[{"a":"a1"},{"b":["b1","b2"]},{"c":{"c1":"c11"}}]'
# ---
# name: test_dump_to_file[tests/data/gen/api_array.json]
  b'[{"a":"a1"},{"b":["b1","b2"]},{"c":{"c1":"c11"}}]'
# ---
# name: test_dump_to_file[tests/data/gen/api_array.jsonl.gz]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file[tests/data/gen/api_array.jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file[tests/data/gen/api_array.ndjson.gz]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file[tests/data/gen/api_array.ndjson]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file_stderr[None]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file_stderr[json]
  b'[{"a":"a1"},{"b":["b1","b2"]},{"c":{"c1":"c11"}}]'
# ---
# name: test_dump_to_file_stderr[jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file_stdout[None]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_dump_to_file_stdout[json]
  b'[{"a":"a1"},{"b":["b1","b2"]},{"c":{"c1":"c11"}}]'
# ---
# name: test_dump_to_file_stdout[jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink[.json]
  b'[\n{"a":"a1"},\n{"b":["b1","b2"]},\n{"c":{"c1":"c11"}}\n]'
# ---
# name: test_sink[.jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink[.ndjson]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink_dict[.json]
  b'{"a":"b"}'
# ---
# name: test_sink_dict[.jsonl]
  b'{"a":"b"}\n'
# ---
# name: test_sink_dict[.ndjson]
  b'{"a":"b"}\n'
# ---
# name: test_sink_from_file[tests/data/gen/api_array.json.gz]
  b'[\n{"a":"a1"},\n{"b":["b1","b2"]},\n{"c":{"c1":"c11"}}\n]'
# ---
# name: test_sink_from_file[tests/data/gen/api_array.json]
  b'[\n{"a":"a1"},\n{"b":["b1","b2"]},\n{"c":{"c1":"c11"}}\n]'
# ---
# name: test_sink_from_file[tests/data/gen/api_array.jsonl.gz]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink_from_file[tests/data/gen/api_array.jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink_from_file[tests/data/gen/api_array.ndjson.gz]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink_from_file[tests/data/gen/api_array.ndjson]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink_from_file_stdout[None]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
# name: test_sink_from_file_stdout[json]
  b'[\n{"a":"a1"},\n{"b":["b1","b2"]},\n{"c":{"c1":"c11"}}\n]'
# ---
# name: test_sink_from_file_stdout[jsonl]
  b'{"a":"a1"}\n{"b":["b1","b2"]}\n{"c":{"c1":"c11"}}\n'
# ---
